# kreida-rs

./: .gitignore  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.githooks/: pre-commit  pre-push
assets/demo/: .gitignore  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
assets/demo/src/: index.js
assets/demo/src/styles/: index.scss
crates/core/: Cargo.toml
crates/core/src/: buffer.rs  canvas.rs  lib.rs  space.rs  style.rs
crates/core/src/tools/: bar.rs
crates/demo/: Cargo.toml  index.html  package.json
crates/demo/src/: lib.rs  main.rs
crates/demo/src/app/: canvas.rs  message.rs  mod.rs  route.rs
crates/demo/src/effects/: mod.rs  sinusoid1.rs  spirograph.rs  tiles.rs  wave.rs
examples/kreida-wasm-chart/: Cargo.toml  README.md  justfile
examples/kreida-wasm-chart/assets/static/: main.js  style.css
examples/kreida-wasm-chart/src/: main.rs
examples/kreida-wasm-chart/util/: emcc  start
examples/kreida-wasm-chart/web/: index.html  main.js
examples/kreida-wasm-demo/: Cargo.toml  README.md  Web.toml  justfile  run-wue.sh  run-wuu.sh
examples/kreida-wasm-demo/assets/static/: main.js
examples/kreida-wasm-demo/src/: animation.rs  effects.rs  main.rs
examples/kreida-wasm-demo/static/: index.html  main.js  style.css
examples/kreida-wasm-demo/util/: debug
examples/kreida-wasm-demo/web/: index.html  main.js  style.css
rust/kreida/: .gitignore  Cargo.toml
rust/kreida/src/: buffer.rs  canvas.rs  fun.rs  space.rs  style.rs
rust/kreida/src/tools/: bar.rs  line.rs  mod.rs
rust/wasm-demo/: Cargo.toml  README.md  Trunk.toml  index.html  run.sh
rust/wasm-demo/assets/: demo.scss
rust/wasm-demo/src/: lib.rs  main.rs
rust/wasm-demo/src/effects/: lines.rs  mod.rs  sinusoid1.rs  sinusoid2.rs  spirograph.rs  wave.rs
src/: lib.rs
src/core/: buffer.rs  canvas.rs  mod.rs  space.rs  style.rs
