[package]
name = "kreida"
version = "0.0.1"
authors = ["Alexander Irbis <irbis.labs@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Kreida-rs is a minimalistic 2D graphics library (WIP)"
keywords = ["2d", "graphics", "gui"]
categories = ["gui", "rendering", "visualization"]
readme = "README.md"
homepage = "https://github.com/irbis-labs/kreida-rs"
repository = "https://github.com/irbis-labs/kreida-rs"
documentation = "https://docs.rs/kreida-rs/"
publish = true

[badges]
travis-ci = { repository = "irbis-labs/rsmorphy" }


[workspace]
members = [
    "examples/kreida-wasm-chart",
    "examples/kreida-wasm-demo",
]


[lib]
name = "kreida"


[dependencies]
num = "0.1"
