[workspace.package]
version = "0.1.0"
authors = ["Alexander Irbis <irbis.labs@gmail.com>"]
publish = true
edition = "2024"

license = "MIT/Apache-2.0"
homepage = "https://github.com/irbis-labs/kreida-rs"
repository = "https://github.com/irbis-labs/kreida-rs"
documentation = "https://docs.rs/kreida-rs/"

[package]
name = "kreida"
description = "Kreida-rs is a minimalistic 2D graphics library (WIP)"
keywords = ["2d", "graphics", "gui"]
categories = ["gui", "rendering", "visualization"]
readme = "README.md"

authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true


[badges]
travis-ci = { repository = "irbis-labs/kreida-rs" }


[workspace]
members = [
    "crates/demo",
    "crates/core",
]


[workspace.dependencies]
derive_more = { version = "2" }
console_error_panic_hook = "0.1"
futures = { version = "0.3" }
gloo = { version = "0.11", default-features = false, features = [
    "console",
    "events",
    "render",
    "utils"
] }
num = { version = "0.4", default-features = false }
rand = { version = "0.9" }
wasm-bindgen = "0.2.71"
web-sys = { version = "0.3" }
yew = { version = "0.21", features = ["csr"] }
yew-router = { version = "0.18" }


[dependencies]
kreida-core = { path = "crates/core" }
