[package]
name = "kreida-demo"

authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
kreida = { path = "../.." }

console_error_panic_hook = { workspace = true }
futures = { workspace = true }
gloo = { workspace = true, default-features = false, features = [
    "console",
    "events",
    "render",
    "utils"
] }
wasm-bindgen = "0.2.71"
web-sys = { workspace = true, features = [
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
] }
yew = { workspace = true, features = ["csr"] }
