[package]
name = "kreida-wasm-chart"
version = "0.1.0"
authors = ["Alexander Irbis <irbis.labs@gmail.com>"]
publish = false
workspace = "../.."


[dependencies]


[dependencies.webplatform]
version = "0.5"
git = "https://github.com/irbis-labs/rust-webplatform"

[dependencies.kreida]
version = "0.0.1"
path = "../.."
