[package]
name = "kreida-wasm-demo"
version = "0.1.0"
authors = ["Alexander Irbis <irbis.labs@gmail.com>"]
publish = false
workspace = "../.."


[dependencies]


[dependencies.webplatform]
version = "*"
path = "/home/stalker/devel/lib/rust-webplatform"

[dependencies.kreida]
version = "0.0.1"
path = "../.."
