[package]
name = "kreida-wasm-demo"
version = "0.1.0"
authors = ["Alexander Irbis <irbis.labs@gmail.com>"]
publish = false
workspace = "../.."


[dependencies]
stdweb = "0.4"

[dependencies.kreida]
version = "0.0.1"
path = "../.."

[dependencies.yew]
git = "https://github.com/alexander-irbis/yew.git"
branch = "animation"
version = "*"
