[package]
name = "kreida-wasm-demo"
version = "0.1.0"
authors = ["Alexander Irbis <irbis.labs@gmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.71"
yew = "0.17"

[dependencies.kreida]
path = "../kreida"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
]
