[package]
name = "kreida-wasm-demo"
version = "0.1.0"
authors = ["Alexander Irbis <irbis.labs@gmail.com>"]
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
futures = { version = "0.3" }
gloo = { version = "0.11", default-features = false, features = ["console", "render", "utils"] }
wasm-bindgen = "0.2.71"
yew = { version = "0.21", features = ["csr"] }

[dependencies.kreida]
path = "../kreida"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
]
